// Vitest Snapshot v1

exports[`serve fs output > _00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "description": "test extension",
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output > _01 output files 1`] = `
Array [
  "manifest.json",
  "service-worker-loader.js",
  "src/content1.ts-loader.js",
  "src/content1.ts.js",
  "src/content2.ts-loader.js",
  "src/content2.ts.js",
  "src/font.otf",
  "src/font.otf__import_url.js",
  "src/image.png",
  "src/image.png__import.js",
  "src/script.ts.js",
  "src/script.ts__scriptId--0.js",
  "vendor/crx-client-port.js",
  "vendor/vite-client.js",
  "vendor/vite-dist-client-env.mjs.js",
  "vendor/webcomponents-custom-elements.js",
]
`;

exports[`serve fs output > _02 optimized deps 1`] = `
Set {
  "src/background.ts",
}
`;

exports[`serve fs output > service-worker-loader.js 1`] = `
"import 'http://localhost:3000/@vite/env';
import 'http://localhost:3000/@crx/client-worker';
import 'http://localhost:3000/src/background.ts';
"
`;

exports[`serve fs output > src/content1.ts.js 1`] = `
"import script from \\"/src/script.ts__scriptId--0.js\\";
console.log(\\"content.ts\\", { script });
"
`;

exports[`serve fs output > src/content1.ts-loader.js 1`] = `
"(function () {
  'use strict';

  const injectTime = performance.now();
  (async () => {
    if (\\"\\")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL(\\"\\")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"vendor/vite-client.js\\")
    );
    const { onExecute } = await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"src/content1.ts.js\\")
    );
    onExecute?.({ perf: { injectTime, loadTime: performance.now() - injectTime } });
  })().catch(console.error);

})();
"
`;

exports[`serve fs output > src/content2.ts.js 1`] = `
"import font from \\"/src/font.otf__import_url.js\\";
console.log(\\"content2.ts\\", { font });
"
`;

exports[`serve fs output > src/content2.ts-loader.js 1`] = `
"(function () {
  'use strict';

  const injectTime = performance.now();
  (async () => {
    if (\\"\\")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL(\\"\\")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"vendor/vite-client.js\\")
    );
    const { onExecute } = await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"src/content2.ts.js\\")
    );
    onExecute?.({ perf: { injectTime, loadTime: performance.now() - injectTime } });
  })().catch(console.error);

})();
"
`;

exports[`serve fs output > src/font.otf__import_url.js 1`] = `"export default \\"/src/font.otf\\""`;

exports[`serve fs output > src/image.png__import.js 1`] = `"export default \\"/src/image.png\\""`;

exports[`serve fs output > src/script.ts.js 1`] = `
"import icon from \\"/src/image.png__import.js\\";
console.log(\\"main world script\\", { icon });
export {};
"
`;

exports[`serve fs output > src/script.ts__scriptId--0.js 1`] = `
"export default \\"src/script.ts.js\\";
"
`;
